# stvchm9703.github.io

./: .gitignore  200.html  200.html.br  LICENSE  README.md  TASKS.md  __data.json  __data.json.br  astro.config.mjs  bun.lockb  bundle-visualization.html  components.json  font.css  font.css.br  index.html  index.html.br  package-lock.json  package.json  pnpm-lock.yaml  posts.html  posts.html.br  svelte.config.js  tsconfig.json  uno.config.ts  vite.config.ts
.zed/: tasks.json
_app/: env.js.br  version.json  version.json.br
app/: env.js  version.json  version.json.br
blog_post/: 2025-3-27__linuxubuntu_server_thats_suck.mdx  todo.md
contents/: full-repo-data.json.br
docs/: data_model.md  features.md
posts/: 2cw4jjfe_ygo.html  2cw4jjfe_ygo.html.br  4rpdmeyu_project-management-communications-management-plan-template.html  4rpdmeyu_project-management-communications-management-plan-template.html.br  5k5ggpfa_linux-log-after-cent-os-what-we-can-pick.html  5k5ggpfa_linux-log-after-cent-os-what-we-can-pick.html.br  5k5ggpfa_linux-log-after-centos-what-we-can-pick.html  75qaw2km_ygo-wake-up.html  (+70 more)
tools/convert_blog_post/: .gitignore  CLAUDE.md  Cargo.toml  anytype.d.ts  build.rs  readme.md
tools/convert_blog_post/convert_blog_post_marco/: Cargo.toml
tools/convert_blog_post/convert_blog_post_marco/src/: lib.rs
tools/convert_blog_post/src/: cli.rs  main.rs  mod.rs
tools/convert_blog_post/src/anytype/: enum_set.rs  mod.rs  object.rs  trait_impl.rs
tools/convert_blog_post/src/anytype_proto/: anytype.rs  anytype_model.rs  google_protobuf.rs  mod.rs  trait_impl.rs
tools/convert_blog_post/src/anytype_simplied/: article.rs  attribute.rs  collection.rs  component_base.rs  content_block.rs  mod.rs  page.rs  tag.rs  user.rs  workspace.rs
tools/convert_blog_post/src/anytype_simplied/attributes/: attribute.rs  get_style.rs  mod.rs
tools/convert_blog_post/src/anytype_simplied/content_block/: component_base.rs  content_resolver.rs  mod.rs
tools/convert_blog_post/src/export_model/: collection.rs  common.rs  external_link.rs  file_object.rs  file_util.rs  mod.rs  page.rs  page_ext.rs  page_util.rs  tag.rs  tag_option.rs  tag_util.rs  test.rs  trait_impl.rs
tools/convert_blog_post/src/export_model/content_block/: base_block.rs  bookmark.rs  file.rs  jupyter.rs  latex.rs  layout.rs  link.rs  mark.rs  mod.rs  text.rs
tools/convert_blog_post/src/export_model/page/: attr.rs  ext.rs  layout_related.rs  meta.rs  mod.rs  notebook_related.rs  util.rs
tools/convert_blog_post/src/export_model/tag/: mod.rs  option.rs  util.rs
tools/convert_blog_post/src/jupyter_notbook/: model.rs  util.rs
tools/convert_blog_post/src/jupyter_notebook/: model.rs
tools/convert_blog_post/src/proto/: mod.rs
tools/convert_blog_post/src/proto/anytype/: anytype.rs  changes.rs  events.rs  mod.rs  model.rs  models.rs
tools/convert_blog_post/src/proto/google/: protobuf.rs
(+2103 files in other folders)
