[package]
name = "convert_blog_post"
version = "0.1.0"
edition = "2024"

[dependencies]
glob = "0.3.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_variant = "0.1.3"


clap = { version = "4.5", features = ["derive"] }
enum-repr = "0.2.6"
anyhow = "1.0.98"
# prost-reflect = { version = "0.15.1", features = [
#     "derive",
#     "miette",
#     "serde",
#     "text-format",
# ] }
# prost-wkt = "*"
# prost-wkt-types = "*"
lazy_static = "*"
quick-protobuf = "0.8.0"
once_cell = "*"
rust_string_utils = "0.1.20"
regex = "*"
lazy-regex = "*"
convert_blog_post_marco = { path = "./convert_blog_post_marco" }
stringcase = "*"
lo_ = "0.1.10"
smallvec = "*"
specta = "1.0.5"
specta-typescript = "0.0.9"


# Only necessary if using Protobuf well-known types:
[build-dependencies]
# prost-reflect-build = "0.15.0"
# prost-build = "0.13"
glob = "0.3.2"
regex = "*"
lazy_static = "*"
# prost-wkt-build = "*"
# pb-rs = "0.9.1"
# walkdir = "2"
