[package]
name = "convert_blog_post"
version = "0.1.0"
edition = "2024"

[dependencies]
glob = "0.3.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_variant = "0.1.3"


clap = { version = "4.5", features = ["derive"] }
enum-repr = "0.2.6"
anyhow = "1.0.98"

lazy_static = "*"
quick-protobuf = "0.8.0"
once_cell = "*"
rust_string_utils = "0.1.20"
regex = "*"
lazy-regex = "*"
convert_blog_post_marco = { path = "./convert_blog_post_marco" }
stringcase = "*"
lo_ = "0.1.10"
smallvec = "*"
specta = "1.0.5"
specta-typescript = "0.0.9"
chrono = { version = "0.4.43", features = ["serde"] }


# Only necessary if using Protobuf well-known types:
[build-dependencies]

glob = "0.3.2"
regex = "*"
lazy_static = "*"
